fixed responsiveness issue, got rid of red button margin top on mobile

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -27,12 +27,17 @@
   border: 1px solid $red;
   background: white;
   padding: 0.5em 1.5em;
-  margin-top: 1em;
   :hover {
     transition: opacity 0.4s;
     opacity: 0.7;
   }
   a {
     color: $red !important;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .red-button {
+    margin-top: 1em;
   }
 }
